--- a/css/about.css
+++ b/css/about.css
@@ -740,10 +740,17 @@
 
   #meet-the-team .container .left-section {
     width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  #meet-the-team .container .left-section img {
+    width: 65%;
   }
 
   #meet-the-team .container .right-section {
-    width: 50%;
+    width: 45%;
   }
 
   #meet-the-team .container .right-section .right-section-header {
@@ -752,7 +759,7 @@
   }
 
   #meet-the-team .container .right-section p {
-    font-size: 20px;
+    font-size: 18px;
     width: 95%;
   }
 }
