--- a/css/services.css
+++ b/css/services.css
@@ -259,12 +259,6 @@
   #OurServices .container {
     width: 90%;
     display: flex;
-    flex-direction: column;
-  }
-
-  #OurServices .container {
-    width: 95%;
-    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
   }
@@ -1048,6 +1042,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    padding-top: 50px;
     padding-bottom: 50px;
     background-size: 8 0%;
     background-repeat: no-repeat;
@@ -1057,7 +1052,110 @@
   #pricing .container {
     width: 90%;
     display: flex;
-    flex-direction: row;
+    flex-direction: row; /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
+    flex-wrap: wrap;
+    gap: 15px;
+  }
+
+  #pricing .container .pricing-section {
+    width: 100%;
+    height: 450px;
+    background-color: white;
+    border-radius: 30px;
+    margin-top: 0px;
+    border: 1px solid rgb(214, 214, 214);
+    box-sizing: border-box;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 16px;
+    position: relative;
+  }
+
+  #pricing .container .middle-section {
+    width: 100%;
+    height: 450px;
+    background-color: rgb(32, 32, 32);
+    border-radius: 30px;
+    border: 1px solid rgb(214, 214, 214);
+    box-sizing: border-box;
+    padding-left: 30px;
+    padding-right: 30px;
+    color: white;
+    font-size: 16px;
+    position: relative;
+  }
+
+  #pricing .container .pricing-section .header {
+    font-size: 26px;
+    font-weight: bold;
+    padding-bottom: 15px;
+    padding-top: 20px;
+  }
+
+  #pricing .container .middle-section .header {
+    font-size: 26px;
+    font-weight: bold;
+    padding-bottom: 15px;
+    padding-top: 20px;
+  }
+
+  #pricing .container li {
+    list-style-type: none;
+    display: flex;
+    align-items: left;
+    margin-left: -40px;
+    padding-bottom: 10px;
+  }
+
+  #pricing .container li img {
+    width: 20px;
+    padding-right: 10px;
+  }
+
+  #pricing .container .pricing-section button {
+    position: absolute;
+    bottom: 20px;
+    width: 85%;
+    height: 50px;
+    border-radius: 30px;
+    border: none;
+    background-color: rgb(32, 32, 32);
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    transition: 0.3s ease-in-out;
+  }
+
+  #pricing .container .pricing-section button:hover {
+    background-color: transparent;
+    color: black;
+    border: 2px solid rgb(32, 32, 32);
+  }
+
+  #pricing .container .middle-section button:hover {
+    background-color: transparent;
+    color: #f18200;
+    border: 2px solid #f18200;
+  }
+
+  #pricing .container .middle-section button {
+    position: absolute;
+    bottom: 20px;
+    width: 85%;
+    height: 50px;
+    border-radius: 30px;
+    border: none;
+    background-color: #f18200;
+    font-size: 22px;
+    font-weight: bold;
+    cursor: pointer;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    transition: 0.3s ease-in-out;
   }
 }
 
@@ -1088,52 +1186,18 @@
   #pricing .container {
     width: 95%;
     display: flex;
-    flex-direction: row;
-  }
-}
-
-/* -- Tablets -- */
-@media screen and (min-width: 750px) and (max-width: 1023px) {
-}
-
-/* -- Small Desktop -- */
-@media screen and (min-width: 1024px) {
-  body,
-  html {
-    font-family: "HelveticaNeue", sans-serif;
-    color: rgb(32, 32, 32);
-    font-size: 20px;
-    background-color: #f1f1f1;
-    max-width: 100%;
-    /*overflow-x: hidden;*/
-  }
-
-  #pricing {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding-top: 75px;
-    padding-bottom: 75px;
-    background-size: 40%;
-    background-repeat: no-repeat;
-    background-position: center right;
-  }
-
-  #pricing .container {
-    width: 80%;
-    display: flex;
     flex-direction: row; /* make main axis vertical */
-    justify-content: space-between; /* center items vertically, in this case */
+    justify-content: center; /* center items vertically, in this case */
     flex-wrap: wrap;
+    gap: 15px;
   }
 
   #pricing .container .pricing-section {
-    width: 31%;
+    width: 48%;
     height: 600px;
     background-color: white;
     border-radius: 30px;
-    margin-top: 50px;
+    margin-top: 0px;
     border: 1px solid rgb(214, 214, 214);
     box-sizing: border-box;
     padding-left: 30px;
@@ -1143,7 +1207,7 @@
   }
 
   #pricing .container .middle-section {
-    width: 31%;
+    width: 48%;
     height: 600px;
     background-color: rgb(32, 32, 32);
     border-radius: 30px;
@@ -1195,6 +1259,21 @@
     font-weight: bold;
     color: white;
     cursor: pointer;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    transition: 0.3s ease-in-out;
+  }
+
+  #pricing .container .pricing-section button:hover {
+    background-color: transparent;
+    color: black;
+    border: 2px solid rgb(32, 32, 32);
+  }
+
+  #pricing .container .middle-section button:hover {
+    background-color: transparent;
+    color: #f18200;
+    border: 2px solid #f18200;
   }
 
   #pricing .container .middle-section button {
@@ -1208,6 +1287,147 @@
     font-size: 22px;
     font-weight: bold;
     cursor: pointer;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    transition: 0.3s ease-in-out;
+  }
+}
+
+/* -- Tablets -- */
+@media screen and (min-width: 750px) and (max-width: 1023px) {
+}
+
+/* -- Small Desktop -- */
+@media screen and (min-width: 1024px) {
+  body,
+  html {
+    font-family: "HelveticaNeue", sans-serif;
+    color: rgb(32, 32, 32);
+    font-size: 20px;
+    background-color: #f1f1f1;
+    max-width: 100%;
+    /*overflow-x: hidden;*/
+  }
+
+  #pricing {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 75px;
+    padding-bottom: 75px;
+    background-size: 40%;
+    background-repeat: no-repeat;
+    background-position: center right;
+  }
+
+  #pricing .container {
+    width: 80%;
+    display: flex;
+    flex-direction: row; /* make main axis vertical */
+    justify-content: space-between; /* center items vertically, in this case */
+    flex-wrap: wrap;
+    gap: 0px;
+  }
+
+  #pricing .container .pricing-section {
+    width: min(400px, 33%);
+    height: 600px;
+    background-color: white;
+    border-radius: 30px;
+    margin-top: 50px;
+    border: 1px solid rgb(214, 214, 214);
+    box-sizing: border-box;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 18px;
+    position: relative;
+  }
+
+  #pricing .container .middle-section {
+    width: min(400px, 33%);
+    height: 600px;
+    background-color: rgb(32, 32, 32);
+    border-radius: 30px;
+    border: 1px solid rgb(214, 214, 214);
+    box-sizing: border-box;
+    padding-left: 30px;
+    padding-right: 30px;
+    color: white;
+    font-size: 18px;
+    position: relative;
+  }
+
+  #pricing .container .pricing-section .header {
+    font-size: 32px;
+    font-weight: bold;
+    padding-bottom: 30px;
+    padding-top: 40px;
+  }
+
+  #pricing .container .middle-section .header {
+    font-size: 32px;
+    font-weight: bold;
+    padding-bottom: 30px;
+    padding-top: 40px;
+  }
+
+  #pricing .container li {
+    list-style-type: none;
+    display: flex;
+    align-items: left;
+    margin-left: -40px;
+    padding-bottom: 10px;
+  }
+
+  #pricing .container li img {
+    width: 25px;
+    padding-right: 10px;
+  }
+
+  #pricing .container .pricing-section button {
+    position: absolute;
+    bottom: 50px;
+    width: 85%;
+    height: 60px;
+    border-radius: 30px;
+    border: none;
+    background-color: rgb(32, 32, 32);
+    font-size: 22px;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    transition: 0.3s ease-in-out;
+  }
+
+  #pricing .container .pricing-section button:hover {
+    background-color: transparent;
+    color: black;
+    border: 2px solid rgb(32, 32, 32);
+  }
+
+  #pricing .container .middle-section button:hover {
+    background-color: transparent;
+    color: #f18200;
+    border: 2px solid #f18200;
+  }
+
+  #pricing .container .middle-section button {
+    position: absolute;
+    bottom: 50px;
+    width: 85%;
+    height: 60px;
+    border-radius: 30px;
+    border: none;
+    background-color: #f18200;
+    font-size: 22px;
+    font-weight: bold;
+    cursor: pointer;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    transition: 0.3s ease-in-out;
   }
 }
 
