--- a/css/about.css
+++ b/css/about.css
@@ -211,9 +211,9 @@
   }
 
   #hero p {
-    font-size: 20px;
+    font-size: min(20px, 1.5vw);
     line-height: 125%;
-    width: 80%;
+    width: 100%;
     transition: 0.5s ease-in-out;
     position: relative;
     top: 0px;
@@ -498,6 +498,25 @@
     justify-content: center;
     padding-top: 50px;
     padding-bottom: 50px;
+    background-image: url("/images/Vector2.svg");
+    background-size: 40%;
+    background-repeat: no-repeat;
+    background-position: center right;
+    padding-top: 75px;
+    padding-bottom: 0px;
+  }
+
+  #about {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 0px;
+    padding-bottom: 75px;
+    background-image: url("/images/Vector2.svg");
+    background-size: 40%;
+    background-repeat: no-repeat;
+    background-position: center right;
   }
 
   #about .container {
@@ -506,35 +525,73 @@
     flex-direction: row;
   }
 
-  #about .container .left-section {
-    width: 55%;
+  .process-header {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
 
-  #about .container .left-section p {
+  .process-header-container {
+    width: 95%;
+    display: flex;
+    flex-direction: row;
+    font-size: 6vw;
+    font-weight: bold;
+    padding-top: 70px;
+    padding-bottom: 70px;
+    border-bottom: 2px solid rgb(214, 214, 214);
+  }
+
+  #about .container .left-section-mobile {
+    width: 100%;
+  }
+
+  #about .container .left-section-mobile .left-section-element {
+    display: flex;
+    flex-direction: row;
+    border-bottom: 2px solid rgb(214, 214, 214);
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  #about .container .left-section-mobile .left-section-element .float-left {
+    width: 50%;
+  }
+
+  #about .container .left-section-mobile .left-section-element .float-right {
+    width: 40%;
+  }
+
+  #about .container .left-section-mobile .left-section-element .number {
+    padding-top: 8px;
+    font-size: 2vw;
+    padding-bottom: 25px;
+  }
+
+  #about .container .left-section-mobile .left-section-element .header {
+    font-size: 2.5vw;
+    font-weight: bold;
+    width: 40%;
+  }
+
+  #about .container .left-section-mobile .left-section-element p {
     font-size: 18px;
-    width: 60%;
-    margin: 10px;
-  }
-
-  #about .container .left-section .left-section-header {
-    font-size: 4.5vw;
     font-weight: bold;
   }
 
-  #about .container .left-section .left-section-header #orange-header {
-    color: #f18200;
-  }
-
-  #about .container .right-section {
-    display: initial;
-    flex-direction: row;
-    width: 40%;
-    border-bottom: none;
-  }
-
-  #about .container .right-section p {
-    margin: 20px;
+  #about li {
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    margin-left: -40px;
+    padding-bottom: 10px;
     font-size: 18px;
+  }
+
+  #about li img {
+    width: 20px;
+    padding-right: 10px;
   }
 }
 
@@ -683,26 +740,47 @@
   #meet-the-team .container .left-section {
     width: 50%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
   }
 
-  #meet-the-team .container .left-section img {
-    width: 65%;
-  }
-
-  #meet-the-team .container .right-section {
-    width: 45%;
-  }
-
-  #meet-the-team .container .right-section .right-section-header {
+  #meet-the-team .container .left-section .header {
     font-size: 2.5vw;
     font-weight: bold;
   }
 
+  #meet-the-team .container .left-section .subheader {
+    font-size: 1.5vw;
+    padding-bottom: 20px;
+  }
+
+  #meet-the-team .container .left-section img {
+    width: 45%;
+  }
+
+  #meet-the-team .container .right-section {
+    width: 50%;
+  }
+
+  #meet-the-team .container .right-section .right-section-header {
+    font-size: 4vw;
+    font-weight: bold;
+    line-height: 95%;
+    padding-bottom: 30px;
+  }
+
   #meet-the-team .container .right-section p {
     font-size: 18px;
-    width: 95%;
+    width: 85%;
+  }
+
+  #meet-the-team
+    .container
+    .right-section
+    .right-section-header
+    #orange-header {
+    color: #f18200;
   }
 }
 
